@@ -126,3 +126,4 @@ cada mensaje en cada idioma
 
 -Desensamblado hacia arriba en zona cercana a 0 tiene que ver qué condición
 no parar cuando dirección mayor, porque ya es mayor al empezar..
+->probar bien en diferentes roms 128k, en motorola
